[gd_scene load_steps=16 format=2]

[ext_resource path="res://Image/Terre.png" type="Texture" id=1]
[ext_resource path="res://Image/Ball/Asteroid.png" type="Texture" id=2]
[ext_resource path="res://otherRes/Particules/fire.png" type="Texture" id=3]
[ext_resource path="res://Image/Planete/Mars.png" type="Texture" id=4]
[ext_resource path="res://otherRes/UI/Menu Animation.tres" type="Animation" id=5]
[ext_resource path="res://Code/Menu.gd" type="Script" id=6]
[ext_resource path="res://otherRes/UI/ConcertOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://otherRes/UI/Theme/Theme.tres" type="Theme" id=8]
[ext_resource path="res://otherRes/UI/9Patch.svg" type="Texture" id=9]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0.752941, 0, 1, 1, 0.258824, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.209484 ), 0.0, 0.0714733, 0, 0, Vector2( 1, 1 ), -0.00101195, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.27
emission_shape = 2
emission_box_extents = Vector3( 1666, 333, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 39.77
gravity = Vector3( 0, 0, 0 )
initial_velocity = 8000.0
initial_velocity_random = 0.4
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.04
scale_random = 0.03
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 130
extra_spacing_bottom = 50
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Menu Animation" = ExtResource( 5 )

[node name="Bacground" type="ReferenceRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Astéroid" type="TextureRect" parent="Bacground"]
margin_left = 204.543
margin_top = 1260.56
margin_right = 1204.54
margin_bottom = 2260.59
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="Particles2D" parent="Bacground/Astéroid"]
show_behind_parent = true
position = Vector2( 387.112, 702.592 )
rotation = 0.541052
scale = Vector2( 0.3, 0.3 )
amount = 1500
lifetime = 0.5
explosiveness = 0.08
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Mars" type="TextureRect" parent="Bacground"]
margin_left = 190.273
margin_top = 651.685
margin_right = 1190.27
margin_bottom = 1651.69
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terre" type="TextureRect" parent="Bacground"]
margin_left = 233.084
margin_top = -242.598
margin_right = 1233.1
margin_bottom = 757.402
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Bacground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.278431, 0.290196, 0.407843, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1020.0
margin_bottom = 1920.0
custom_constants/separation = 40
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 679.0
margin_right = 689.0
margin_bottom = 994.0
size_flags_horizontal = 2
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
text = "The Planet
     Shooter"
valign = 3

[node name="infinityButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 1034.0
margin_right = 411.0
margin_bottom = 1117.0
size_flags_horizontal = 2
theme = ExtResource( 8 )
text = "Infinity Mode"
align = 0

[node name="customButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 1157.0
margin_right = 312.0
margin_bottom = 1240.0
size_flags_horizontal = 2
theme = ExtResource( 8 )
text = "Customize"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomisationContainer" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.5
margin_top = -682.5
margin_right = 448.5
margin_bottom = 682.5
texture = ExtResource( 9 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CustomisationContainer"]
margin_top = -7.0
margin_right = 442.0
margin_bottom = 63.0
theme = ExtResource( 8 )
text = "Customisation"

[node name="MarginContainer" type="MarginContainer" parent="CustomisationContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 90.0
margin_right = -60.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CustomisationContainer/MarginContainer"]
margin_right = 777.0
margin_bottom = 1215.0

[node name="Panel" type="Panel" parent="CustomisationContainer/MarginContainer/VBoxContainer"]
margin_right = 777.0
margin_bottom = 1128.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="ScrollContainer" type="ScrollContainer" parent="CustomisationContainer/MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CustomisationContainer/MarginContainer/VBoxContainer/Panel/ScrollContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="okButton" type="Button" parent="CustomisationContainer/MarginContainer/VBoxContainer"]
margin_top = 1132.0
margin_right = 777.0
margin_bottom = 1215.0
theme = ExtResource( 8 )
text = "Validé"

[connection signal="pressed" from="MarginContainer/VBoxContainer/infinityButton" to="." method="_on_infinityButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/customButton" to="." method="_on_customButton_pressed"]
[connection signal="pressed" from="CustomisationContainer/MarginContainer/VBoxContainer/okButton" to="." method="_on_okButton_pressed"]
